--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/MaaticIt_Database?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding-UTF-8&autoReconnect=yes&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=Select 1
 spring.jpa.show-sql=true
