--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -50,6 +50,13 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.4</version>
+		</dependency>
+
+		
 	</dependencies>
 
 	<build>
